# pyvortex

./: Makefile  Readme.md  pyproject.toml  setup.cfg
vortex_api/: __init__.py  __version__.py  api.py  vortex_feed.py
vortex_api/backtest/: __init__.py  _backtestingpy.py  _backtrader.py  _common.py  _vectorbt.py
