[metadata]
name = vortex_api
version = 2.0.0
description = Vortex APIs to place orders in Rupeezy application
long_description = file: README.md
long_description_content_type = text/markdown
author = Astha Credit & Securities Pvt Ltd.
author_email = tech@rupeezy.in
url = https://vortex.rupeezy.in
download_url = https://github.com/AsthaTech/pyvortex
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    requests>=2.25.1
    wrapt>=1.15.0
    six>=1.11.0
    pyOpenSSL>=17.5.0
    python-dateutil>=2.6.1
    autobahn[twisted]==19.11.2
    service_identity>=18.1.0

[options.packages.find]
where = .
